--- a/task.ipynb
+++ b/task.ipynb
@@ -121,30 +121,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Коробка №2\n"
+      "\n",
+      "Упаковка для лыж\n"
      ]
     }
    ],
    "source": [
-    "width = 49\n",
-    "length = 66\n",
-    "height = 49\n",
-    "if width<=15 and length<=15 and height<=15:\n",
-    "    print ('Коробка №1')\n",
-    "elif 15<width<=50 or 15<length<=50 or 15<height<=50:\n",
-    "    if 200<=length:\n",
-    "        print ('Упаковка для лыж')\n",
+    "width = 4\n",
+    "length = 320\n",
+    "height = 13\n",
+    "summ = width+length+height\n",
+    "print()\n",
+    "if width<=50 and length<=50 and height<=50:\n",
+    "    if width<=15 and length<=15 and height<=15:\n",
+    "        print ('Коробка №1')\n",
     "    else:\n",
     "        print ('Коробка №2')\n",
-    "elif 50<width or 50<height or 50<length<200:\n",
+    "elif 200<=length:\n",
+    "    print ('Упаковка для лыж')\n",
+    "else:\n",
     "    print('Стандартная коробка №3')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Задание №5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Несчастливый билет\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 12373218\n",
+    "bilet = str(number)\n",
+    "if len(bilet)%2!=0:\n",
+    "    print('Некорректный номер билета')\n",
+    "else:\n",
+    "    b = int(len(bilet)/2)\n",
+    "    if sum(map(int,str(bilet[b:])))==sum(map(int,str(bilet[:b]))):\n",
+    "        print('Счастливый билет')\n",
+    "    else:\n",
+    "        print('Несчастливый билет') \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Задание №6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите тип фигуры:Прямоугольник\n",
+      "Введите длину стороны A:2\n",
+      "Введите длину стороны B:3\n",
+      "Площадь прямоугольника: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "a=input('Введите тип фигуры:')\n",
+    "if a=='Круг':\n",
+    "    R=int(input('Введите радиус круга:'))\n",
+    "    print('Площадь круга:', round(math.pi*(R**2), 2))\n",
+    "elif a=='Треугольник':\n",
+    "    A=int(input('Введите длину стороны A:'))\n",
+    "    B=int(input('Введите длину стороны B:'))\n",
+    "    C=int(input('Введите длину стороны C:'))\n",
+    "    P=(A+B+C)/2\n",
+    "    print('Площадь треугольника:', round(math.sqrt(P*(P-A)*(P-B)*(P-C)), 2))\n",
+    "elif a=='Прямоугольник':\n",
+    "    A=int(input('Введите длину стороны A:'))\n",
+    "    B=int(input('Введите длину стороны B:'))\n",
+    "    print('Площадь прямоугольника:', round(A*B, 2))\n",
+    "else:\n",
+    "    print('Введена некорретная фигура')"
    ]
   }
  ],
